--- a/AgileColorPicker.xaml
+++ b/AgileColorPicker.xaml
@@ -1,10 +1,10 @@
-﻿<Border x:Class="AgileBIM.Controls.ColorPicker"
+﻿<Border x:Class="AgileBIM.Controls.AgileColorPicker"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:local="clr-namespace:AgileBIM.Controls"
-        Loaded="ColorPicker_Loaded"
+        Loaded="AgileColorPicker_Loaded"
         Background="{Binding SelectedBrush, ElementName=uc}"        
         Padding="0"
         x:Name="uc"
@@ -14,6 +14,7 @@
         d:DesignHeight="30" d:DesignWidth="30">
     <Border.Style>
         <Style TargetType="{x:Type Border}">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
             <Setter Property="BorderBrush" Value="Black"/>
             <Setter Property="BorderThickness" Value="2"/>            
         </Style>
@@ -39,11 +40,19 @@
         </Style>
     </Border.Resources>
     <Grid>
-        <Button x:Name="btnColor" Content="X" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
-                Click="btnColor_Click" BorderBrush="Black" BorderThickness="0"
-                Background="Transparent"
-                Foreground="Transparent"/>
-        <Popup x:Name="popColorPalette" PlacementTarget="{Binding ElementName=btnColor}" Width="264">
+        <Button x:Name="btnColor"
+                Click="btnColor_Click"
+                Focusable="False"                   
+                IsHitTestVisible="True"        
+                BorderThickness="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Margin="2"
+                Background="{Binding SelectedBrush, ElementName=uc}"                
+                Foreground="{Binding LabelColor, ElementName=uc}">
+            <TextBlock Text="{Binding Label, ElementName=uc}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0" Margin="0"/>
+        </Button>
+        <Popup x:Name="popColorPalette" PlacementTarget="{Binding ElementName=btnColor}" Placement="Custom" Width="264">
             <Border BorderThickness="2" BorderBrush="Black">
                 <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="icColorList">
                     <ItemsControl.ItemsPanel>
