--- a/AgileTextBox.xaml
+++ b/AgileTextBox.xaml
@@ -1,4 +1,4 @@
-﻿<TextBox x:Class="AgileBIM.Controls.WatermarkTextBox"
+﻿<TextBox x:Class="AgileBIM.Controls.AgileTextBox"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -78,10 +78,10 @@
                                 <Setter Property="Opacity" TargetName="border" Value="0.56"/>
                             </Trigger>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="BorderBrush" TargetName="border" Value="{Binding FocusedBorderColor, ElementName=tbx}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushFocused, ElementName=tbx}"/>
                             </Trigger>
                             <Trigger Property="IsKeyboardFocused" Value="True">
-                                <Setter Property="BorderBrush" TargetName="border" Value="{Binding FocusedBorderColor, ElementName=tbx}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushFocused, ElementName=tbx}"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
