--- a/Tester/MainWindow.xaml
+++ b/Tester/MainWindow.xaml
@@ -1,61 +1,240 @@
-﻿<Window x:Class="Tester.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Tester"
-        xmlns:abc="clr-namespace:AgileBIM.Controls;assembly=AgileBIM.Controls"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="350">
-    <Window.Resources>
-        
-    </Window.Resources>
-    <StackPanel>
-        <TabControl>
-            <TabItem Header="WatermarkTextBox">
-                <StackPanel>
-                    <TextBlock Text="Enabled Versions" HorizontalAlignment="Center"/>
-                    <Grid Margin="0,0,0,10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <abc:WatermarkTextBox Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0,0,0"/>
-                        <abc:WatermarkTextBox Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0" Grid.Column="1" Text="This one has a value"/>
-                    </Grid>
-                    <TextBlock Text="Disabled Versions" HorizontalAlignment="Center"/>
-                    <Grid Margin="0,0,0,10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <abc:WatermarkTextBox IsEnabled="False" Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0,0,0"/>
-                        <abc:WatermarkTextBox IsEnabled="False" Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0" Grid.Column="1" Text="This one has a value"/>
-                    </Grid>
-                    <TextBlock Text="Watermark Box With ColorPicker" HorizontalAlignment="Center"/>
-                    <Grid Margin="5,0,5,10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="25"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <abc:ColorPicker CornerRadius="5,0,0,5" BorderThickness="2,2,0,2" Padding="0" SelectedColor="Yellow" BorderBrush="Black"
-                                         Height="{Binding ActualHeight, ElementName=tbxThickness}"/>
-                        <abc:WatermarkTextBox x:Name="tbxThickness" Watermark="Line Thickness" BorderThickness="2" BorderRadius="0,5,5,0" Grid.Column="1" BorderBrush="Black"/>
-                    </Grid>
-                    
-                    
-                </StackPanel>
-
-            </TabItem>
-            <TabItem Header="Misc">
-                <StackPanel>
-                    <abc:ColorPicker SelectedColor="Blue" CornerRadius="5" Width="40" Height="20" HorizontalAlignment="Left" Margin="5"/>
-                </StackPanel>
-            </TabItem>
-        </TabControl>
+﻿<Window
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Tester"
+    xmlns:abc="clr-namespace:AgileBIM.Controls;assembly=AgileBIM.Controls"
+    x:Class="Tester.MainWindow"
+    mc:Ignorable="d"
+    Background="White"
+    Title="MainWindow" Height="800" Width="350">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
 
 
+        <abc:AgileTabControl TabStripPlacement="Right" BorderThickness="4" BorderRadius="12,0,0,12" Margin="12" MarginHeaderPanel="0,18,0,0" Background="Yellow" Height="200">
+            <abc:AgileTabControl.TabBlankSpaceContent>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">
+                    also a
+                    <LineBreak/>
+                    content
+                    <LineBreak/>
+                    area
+                </TextBlock>                    
+            </abc:AgileTabControl.TabBlankSpaceContent>
+            <abc:AgileTabItem Header="Square" TabBackgroundSelected="Gray" TabSelectedMargin="-4,0,0,0" BorderThickness="1" BorderBrush="LightGray" Background="AliceBlue"/>
+            <abc:AgileTabItem Header="Round" TabBorderThickness="0,2,2,2" Padding="15,2" TabBorderRadius="0,8,8,0" TabSelectedMargin="0,0,0,0" TabBackgroundSelected="Blue" TabBackground="Green" Background="Blue"/>
+            <abc:AgileTabItem Header="Rotated" TabIsRotated="True" HorizontalAlignment="Left" TabBorderRadius="0,0,0,10" TabBorderThickness="4,0,0,4" TabSelectedMargin="-4,0,0,0" TabBorderBrushSelected="Black" TabBorderBrush="Black" Padding="8,0,8,5" />
+        </abc:AgileTabControl>
+
+        <StackPanel Grid.Row="2">
+            <TextBlock Text="Enabled Versions" HorizontalAlignment="Center">
+                <TextBlock.RenderTransform>
+                    <RotateTransform Angle="0"/>
+                </TextBlock.RenderTransform>
+            </TextBlock>
+            <Grid Margin="0,0,0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <abc:AgileTextBox Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0,0,0"/>
+                <abc:AgileTextBox Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0" Grid.Column="1" Text="This one has a value"/>
+            </Grid>
+            <TextBlock Text="Disabled Versions" HorizontalAlignment="Center"/>
+            <Grid Margin="0,0,0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <abc:AgileTextBox IsEnabled="False" Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0,0,0"/>
+                <abc:AgileTextBox IsEnabled="False" Watermark="This watermark" WatermarkFontFamily="Arial" BorderRadius="5" Margin="5,0" Grid.Column="1" Text="This one has a value"/>
+            </Grid>
+            <TextBlock Text="Watermark Box joined to AgileColorPicker" HorizontalAlignment="Center"/>
+            <Grid Margin="5,0,5,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="25"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <abc:AgileColorPicker CornerRadius="5,0,0,5" BorderThickness="2,2,0,2" Padding="0" SelectedColor="Yellow" BorderBrush="Black"
+                                              Height="{Binding ActualHeight, ElementName=tbxThickness}"/>
+                <abc:AgileTextBox Watermark="Line Thickness" BorderThickness="2" BorderRadius="0,5,5,0" Grid.Column="1" BorderBrush="Black"/>
+            </Grid>
+            <TextBlock Text="Misc AgileColorPicker Arrangments" HorizontalAlignment="Center"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <abc:AgileColorPicker SelectedColor="Blue" CornerRadius="10" Width="20" Height="20" HorizontalAlignment="Left" Margin="5"/>
+                <abc:AgileColorPicker SelectedColor="Red" BorderBrush="Gray" CornerRadius="10" Width="20" Height="20" HorizontalAlignment="Left" Margin="5" Label="X"/>
+                <abc:AgileColorPicker SelectedColor="Black" BorderBrush="Black" CornerRadius="7" Width="50" Height="20" HorizontalAlignment="Left" Margin="5" Label="Label"/>
+                <abc:AgileColorPicker SelectedColor="Yellow" BorderBrush="Red" CornerRadius="0" Width="20" Height="20" HorizontalAlignment="Left" Margin="5" Label="?"/>
+                <abc:AgileColorPicker SelectedColor="Orange" BorderBrush="Black" CornerRadius="0" Width="20" Height="20" HorizontalAlignment="Left" Margin="5"/>
+            </StackPanel>
+
+            <Separator Margin="5"/>
+            <TextBlock Text="Toggle Buttons" HorizontalAlignment="Center" Margin="5"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <abc:AgileToggleButton Background="Orange" 
+                                       BorderBrush="Red"
+                                       
+                                       BackgroundChecked="Green" 
+                                       BorderBrushChecked="Black"
+                                       
+                                       BackgroundHover="Aqua"
+                                       BorderBrushHover="LightGreen"
+                                       
+                                       BackgroundPressed="LightGray"
+                                       BorderBrushPressed="Teal"                                       
+                                       
+                                       BorderRadius="5"
+                                       BorderThickness="3"
+                                       Width="50"
+                                       Margin="5,0"
+                                       Content="{Binding IsChecked, RelativeSource={RelativeSource Self}}"/>
+
+                <abc:AgileToggleButton Background="Orange" 
+                                       BorderBrush="Red"
+                                       Foreground="Black"
+                                       BackgroundChecked="Green" 
+                                       BorderBrushChecked="Black"
+                                       
+                                       BackgroundHover="Aqua"
+                                       BorderBrushHover="LightGreen"
+                                       
+                                       BackgroundPressed="LightGray"
+                                       BorderBrushPressed="Teal"                                       
+                                       
+                                       BorderRadius="12"
+                                       BorderThickness="3"
+                                       Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
+                                       Margin="5,0"
+                                       CheckVisibility="Visible"/>
+
+                <abc:AgileToggleButton Background="Orange" 
+                                       BorderBrush="Red"
+                                       Foreground="Black"
+                                       BackgroundChecked="Green" 
+                                       BorderBrushChecked="Black"
+                                       
+                                       BackgroundHover="Aqua"
+                                       BorderBrushHover="LightGreen"
+                                       
+                                       BackgroundPressed="LightGray"
+                                       BorderBrushPressed="Teal"                                       
+                                       IsChecked="True"
+                                       BorderRadius="0"
+                                       BorderThickness="3"
+                                       Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
+                                       Margin="5,0"                                       
+                                       CheckVisibility="Visible"/>
+
+                <abc:AgileToggleButton Background="Orange" 
+                                       BorderBrush="Red"
+                                       Foreground="Black"
+                                       BackgroundChecked="Green" 
+                                       BorderBrushChecked="Black"
+                                       
+                                       BackgroundHover="Aqua"
+                                       BorderBrushHover="LightGreen"
+                                       
+                                       BackgroundPressed="LightGray"
+                                       BorderBrushPressed="Teal"                                       
+                                       IsChecked="True"
+                                       BorderRadius="0"
+                                       BorderThickness="3"
+                                       Width="50"
+                                       Margin="5,0"
+                                       Content="{Binding IsChecked, RelativeSource={RelativeSource Self}}"/>
+
+                <abc:AgileToggleButton Background="Orange" 
+                                       BorderBrush="Red"
+                                       Foreground="Black"
+                                       BackgroundChecked="Green" 
+                                       BorderBrushChecked="Black"
+                                       
+                                       BackgroundHover="Aqua"
+                                       BorderBrushHover="LightGreen"
+                                       
+                                       BackgroundPressed="LightGray"
+                                       BorderBrushPressed="Teal"                                       
+                                       IsEnabled="False"
+                                       BorderRadius="5"
+                                       BorderThickness="3"
+                                       Padding="10,2"
+                                       Margin="5,0"
+                                       Content="Disabled"/>
+            </StackPanel>
+            
+
+        </StackPanel>
+
+      
+
+        <abc:AgileTabControl Grid.Row="4" SelectedIndex="3" Visibility="Visible" MinHeight="200" >
+            <TabControl.Resources>
+                <Style x:Key="rotatedTab" TargetType="{x:Type abc:AgileTabItem}">
+                    <Setter Property="Background" Value="Gray"/>
+                    <Setter Property="TabBorderThickness" Value="0,3,3,3"/>
+                    <Setter Property="TabSelectedMargin" Value="0,0,0,-2"/>
+                    <Setter Property="TabBorderRadius" Value="0,10,10,0"/>
+                    <Setter Property="Margin" Value="0,0,0,0"/>
+                    <Setter Property="Padding" Value="5,3,10,5"/>
+                    <Setter Property="Foreground" Value="Khaki"/>
+                    <Setter Property="TabBorderBrush" Value="Red"/>
+                    <Setter Property="TabBackground" Value="Gray"/>
+                    <Setter Property="TabBorderBrushSelected" Value="Black"/>
+                    <Setter Property="TabBackgroundSelected" Value="Black" />
+                    <Setter Property="TabBorderBrushHover" Value="MediumBlue"/>
+                    <Setter Property="TabBackgroundHover" Value="Magenta"/>
+                    <!--<Setter Property="VerticalContentAlignment" Value="Bottom"/>-->
+                    <Setter Property="TabIsRotated" Value="True"/>
+                </Style>
+                <Style x:Key="horzTab" TargetType="{x:Type abc:AgileTabItem}">
+                    <Setter Property="Background" Value="Gray"/>
+                    <Setter Property="TabBorderThickness" Value="0,3,3,0"/>
+                    <Setter Property="TabSelectedMargin" Value="0,0,0,-2"/>
+                    <Setter Property="TabBorderRadius" Value="0,10,0,0"/>
+                    <Setter Property="Padding" Value="10,5,10,3"/>
+                    <Setter Property="Margin" Value="0,0,0,0"/>
+                    <Setter Property="VerticalAlignment" Value="Bottom"/>
+                    <Setter Property="TabBorderBrush" Value="Red"/>
+                    <Setter Property="TabBorderBrushHover" Value="MediumBlue"/>
+                    <Setter Property="TabBackgroundHover" Value="Magenta"/>
+                    <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+                </Style>
+            </TabControl.Resources>
+            
+
+            <!--<abc:AgileTabItem Tag="My Header Name">
+                 <abc:AgileTabItem.Header>
+                 <Border BorderBrush="Black" BorderThickness="1">
+                 <Border.Style>
+                 <Style TargetType="{x:Type Border}">
+                 <Setter Property="Background" Value="Black"/>
+                 </Style>
+                 </Border.Style>
+                 <TextBlock Text="{Binding Parent.Parent.Tag}"/>
+                 </Border>
+                 
+                 </abc:AgileTabItem.Header>
+                 </abc:AgileTabItem>-->
+
+            <abc:AgileTabItem Header="Longest" Style="{DynamicResource rotatedTab}">
+                
+            </abc:AgileTabItem>
+            <abc:AgileTabItem Header="Tab1" Style="{DynamicResource horzTab}"/>
+            <abc:AgileTabItem Header="smll" Style="{DynamicResource rotatedTab}"/>
+            <abc:AgileTabItem Header="Misc" Style="{DynamicResource rotatedTab}"/>
+            <abc:AgileTabItem Header="smll" Style="{DynamicResource rotatedTab}"/>
+            <abc:AgileTabItem Header="Tab1" Style="{DynamicResource horzTab}"/>
+
+        </abc:AgileTabControl>
+    </Grid>
 
 
-    </StackPanel>
 </Window>
