--- a/AgileComboBox.xaml
+++ b/AgileComboBox.xaml
@@ -9,9 +9,7 @@
     <ComboBox.Template>
         <ControlTemplate TargetType="{x:Type ComboBox}"
                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" >
+                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
             <Grid x:Name="templateRoot" SnapsToDevicePixels="True">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -153,14 +151,14 @@
                     </Border>
                 </Popup>
                 <ToggleButton x:Name="toggleButton" 
-                              BorderBrush="{TemplateBinding BorderBrush}" 
-                              BorderThickness="{TemplateBinding BorderThickness}" 
+                              BorderBrush="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=ComboBox}}" 
+                              BorderThickness="{Binding BorderThickness, RelativeSource={RelativeSource AncestorType=ComboBox}}" 
                               Background="{Binding Background, RelativeSource={RelativeSource AncestorType=ComboBox}}" 
                               Grid.ColumnSpan="2" 
                               Tag="{Binding}"
                               IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}">
                     <ToggleButton.Style>
-                        <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource {x:Type ToggleButton}}">
+                        <Style TargetType="{x:Type ToggleButton}">
                             <Setter Property="OverridesDefaultStyle" Value="True"/>
                             <Setter Property="IsTabStop" Value="False"/>
                             <Setter Property="Focusable" Value="False"/>
@@ -221,7 +219,7 @@
                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
             </Grid>
-            <ControlTemplate.Triggers>
+            <ControlTemplate.Triggers>                
                 <DataTrigger Binding="{Binding IsOpen, ElementName=PART_Popup}" Value="True">
                     <Setter Property="Tag" TargetName="toggleButton" Value="{Binding ArrowGeometryOpened, RelativeSource={RelativeSource AncestorType=ComboBox}}"/>
                 </DataTrigger>
