--- a/AgileToggleButton.xaml
+++ b/AgileToggleButton.xaml
@@ -4,10 +4,12 @@
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
               xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
               xmlns:local="clr-namespace:AgileBIM.XamlTemplates"
-              mc:Ignorable="d"
-              d:DesignHeight="400" d:DesignWidth="400">
+              mc:Ignorable="d"              
+              d:DesignHeight="400" d:DesignWidth="400">    
     <ToggleButton.Template>
-        <ControlTemplate TargetType="{x:Type ToggleButton}" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">            
+        <ControlTemplate TargetType="{x:Type ToggleButton}" 
+                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
             <Border x:Name="border" 
                     BorderBrush="{TemplateBinding BorderBrush}" 
                     BorderThickness="{TemplateBinding BorderThickness}" 
@@ -52,7 +54,7 @@
                     </Viewbox>
                 </Grid>
             </Border>
-            <ControlTemplate.Triggers>                
+            <ControlTemplate.Triggers>
                 <DataTrigger Binding="{Binding CheckVisibility, RelativeSource={RelativeSource Self}}" Value="Visible">
                     <Setter Property="Visibility" TargetName="CheckMark" Value="Visible"/>
                     <Setter Property="Visibility" TargetName="contentPresenter" Value="Collapsed"/>
@@ -71,6 +73,7 @@
                     <Setter Property="Background" TargetName="border" Value="{Binding BackgroundHover, RelativeSource={RelativeSource AncestorType=ToggleButton}}"/>
                     <Setter Property="BorderBrush" TargetName="border" Value="{Binding BorderBrushHover, RelativeSource={RelativeSource AncestorType=ToggleButton}}"/>
                     <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding ForegroundHover, RelativeSource={RelativeSource AncestorType=ToggleButton}}"/>
+                    <Setter Property="BorderThickness" Value="12"/>
                 </Trigger>
                 <Trigger Property="IsPressed" Value="True">
                     <Setter Property="Background" TargetName="border" Value="{Binding BackgroundPressed, RelativeSource={RelativeSource AncestorType=ToggleButton}}"/>
@@ -79,5 +82,6 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
+
     </ToggleButton.Template>
 </ToggleButton>
