--- a/Tester/MainWindow.xaml
+++ b/Tester/MainWindow.xaml
@@ -9,6 +9,13 @@
     mc:Ignorable="d"
     Background="White"
     Title="AgileBIM Controls Tester" Height="800" Width="350">
+    <Window.Resources>
+        <Style TargetType="{x:Type abc:AgileButton}" BasedOn="{StaticResource {x:Type Button}}"/>
+        <Style TargetType="{x:Type abc:AgileToggleButton}" BasedOn="{StaticResource {x:Type ToggleButton}}"/>
+        <Style TargetType="{x:Type abc:AgileComboBox}" BasedOn="{StaticResource {x:Type ComboBox}}"/>
+        <Style TargetType="{x:Type abc:AgileTabControl}" BasedOn="{StaticResource {x:Type TabControl}}"/>
+        <Style TargetType="{x:Type abc:AgileTabItem}" BasedOn="{StaticResource {x:Type TabItem}}"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -286,7 +293,7 @@
                 <ComboBoxItem Content="Random Combobox Content Item"/>
                 <ComboBoxItem Content="Random Combobox Content Item"/>
             </abc:AgileComboBox>
-            <abc:AgileComboBox SelectedIndex="0" Margin="5" Padding="8,4,3,4">
+            <abc:AgileComboBox SelectedIndex="0" Margin="5">
                 <ComboBoxItem Content="Random Combobox Content Item l;aksdjfla;sdkj;alsdfja;lsdkjlaskdfjalsdfk Random Combobox Content Item l;aksdjfla;sdkj;alsdfja;lsdkjlaskdfjalsdfk Random Combobox Content Item l;aksdjfla;sdkj;alsdfja;lsdkjlaskdfjalsdfk Random Combobox Content Item l;aksdjfla;sdkj;alsdfja;lsdkjlaskdfjalsdfk"/>
                 <ComboBoxItem Content="Random Combobox Content Item"/>
             </abc:AgileComboBox>
